--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   background-color: #e2edff;
 }
 
-section {
+.section {
   padding-top: 5rem;
 }
 
@@ -49,34 +49,34 @@ section {
 }
 
 .keyboard-box::after {
-    content: "KEYBOARD";
-    position: absolute;
-    color: #fff;
-    font-size: 4em;
-    font-weight: bold;
-    font-style: italic;
-    top: 350px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    opacity: 0;
-    transition: 0.5s;
-  }
+  content: "KEYBOARD";
+  position: absolute;
+  color: #fff;
+  font-size: 4em;
+  font-weight: bold;
+  font-style: italic;
+  top: 350px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  opacity: 0;
+  transition: 0.5s;
+}
 
-  .keyboard-box:hover::after {
-    opacity: 0.2;
-  }
+.keyboard-box:hover::after {
+  opacity: 0.2;
+}
 
-  .keyboard-name {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    color: #fff;
-    text-align: center;
-    font-size: 2em;
-    opacity: 0;
-    transform: translate3d(0, 0, 50px);
-    transition: 0.5s;
-  }
+.keyboard-name {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  font-size: 2em;
+  opacity: 0;
+  transform: translate3d(0, 0, 50px);
+  transition: 0.5s;
+}
 
 .keyboard-box:hover .keyboard-name {
   top: 20px;
@@ -95,7 +95,6 @@ section {
 .keyboard-box:hover .keyboard-detail-button {
   opacity: 1;
   bottom: 20px;
-
 }
 .keyboard-img {
   position: absolute;
@@ -104,8 +103,8 @@ section {
   transform: translate3d(-50%, -52%, 80px);
   max-width: 350px;
   transition: 0.5s;
+  x
 }
-
 
 .keyboard-box:hover .keyboard-img {
   transform: translate3d(-50%, -52%, 100px) rotate(5deg) scale(1.2);
